[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/NewItems/shield.png" type="Texture" id=1]
[ext_resource path="res://src/script/chest.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 49.6206, 45.9464 )

[node name="green-chest" type="Area2D"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 2 )
__meta__ = {
"_editor_description_": "Shoes"
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 2.67579, 1.48654 )
scale = Vector2( 0.539733, 0.477159 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[connection signal="body_entered" from="." to="." method="_on_greenchest_body_entered"]
