[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/NewItems/redPotion.png" type="Texture" id=1]
[ext_resource path="res://src/script/chest.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 41.0265, 47.7755 )

[node name="red-chest" type="Area2D"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 2 )
__meta__ = {
"_editor_description_": "Energy Potion"
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1.74755, -13.6308 )
scale = Vector2( 0.401642, 0.334668 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2.37842, -10.6307 )
shape = SubResource( 1 )

[connection signal="body_entered" from="." to="." method="_on_redchest_body_entered"]
